fix on mobile

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -190,7 +190,6 @@ body {
 .ui-grid-header-cell {
     /*center */
     text-align: center;
-    background: #FF9900;
     color: #FFF;
     border-color: #D4D4D4 !important;
 }
@@ -202,6 +201,7 @@ body {
     position: absolute;
     /*right: 3px;
     margin-top: 8px;*/
+    height: 50px;
 }
 
 
@@ -338,6 +338,7 @@ body {
 
 .ui-grid-header-cell-label {
     white-space: pre;
+    height: 50px;
 }
 
 .header,
@@ -368,4 +369,24 @@ body {
     .menu-item-text {
         display: inline;
     }
+}
+
+.ui-grid-header-viewport {
+    background: #FF9900;
+}
+#gridWraper {
+    max-width: 1265px;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+}
+.footer {
+    padding: 0;
+    margin: 0;
+    /*position: absolute;
+    bottom: 0;
+    width: 100%;*/
+}
+.view-containner {
+    height: 100%;
 }
